login page added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  go_router: ^14.6.2
+  http: ^1.2.2
+  shared_preferences: ^2.3.3
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +21,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+    - assets/animations/
