--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,17 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^14.6.2
-  http: ^1.2.2
-  shared_preferences: ^2.3.3
+  dio: ^5.4.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.8
 
 flutter:
   uses-material-design: true
