--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  # Routing
   go_router: ^14.6.2
+  
+  # State Management
+  flutter_riverpod: ^2.6.1
+  
+  # Network
   dio: ^5.4.0
+  
+  # Local Storage
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  
+  # UI
   flutter_svg: ^2.0.10+1
 
 dev_dependencies:
@@ -20,7 +32,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^6.0.0
   hive_generator: ^2.0.1
-  build_runner: ^2.4.8
+  build_runner: ^2.4.13
 
 flutter:
   uses-material-design: true
