--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,10 @@ dependencies:
   
   # UI
   flutter_svg: ^2.0.10+1
+  
+  # Utilities
+  intl: ^0.19.0
+
 
 dev_dependencies:
   flutter_test:
@@ -39,3 +43,4 @@ flutter:
   assets:
     - assets/images/
     - assets/animations/
+    - assets/data/
